--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
