--- a/app.json
+++ b/app.json
@@ -41,11 +41,10 @@
     "plugins": [
       "expo-router",
       [
-        "react-native-vision-camera",
+        
+         "expo-location",
         {
-          "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
-          "enableMicrophonePermission": true,
-          "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ]
     ],
