--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-vision-camera": "^3.9.0",
     "react-native-web": "~0.19.6",
-    "expo-location": "~16.5.5"
+    "expo-location": "~16.5.5",
+    "lottie-react-native": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
