--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/messaging": "^19.0.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "^50.0.0",
-    "expo-constants": "^15.4.5",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
     "expo-modules-core": "^1.11.9",
+    "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.7",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
@@ -37,9 +43,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vision-camera": "^3.9.0",
-    "react-native-web": "~0.19.6",
-    "expo-location": "~16.5.5",
-    "lottie-react-native": "6.5.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
