--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
